# other

./: .bazelignore  .bazelrc.user-default  .gitignore  .npmrc  BUILD.bazel  MODULE.bazel  PORTABILITY-SOURCE.md  dprint.json  go.mod  pnpm-lock.yaml
airef/: BUILD.bazel  dispatch.cue
kernel/: BUILD.bazel  tagged.bzl
kernel/catalog/: apps.cue  brick-.devcontainer.cue  brick-aidr.cue  brick-airef.cue  brick-app.cue  brick-bin.cue  brick-cue.mod.cue  brick-doc.cue  brick-fmt--bazel.cue  brick-fmt--clojure.cue  brick-fmt--go.cue  brick-fmt--java.cue  brick-fmt--python.cue  brick-fmt--yaml.cue  brick-helpers.cue  brick-image--docker--base.cue  brick-image--docker--edge.cue  brick-image--docker--postgres.cue  brick-image--docker--registry.cue  brick-image--packer--coder.cue  brick-interface--aws.cue  brick-interface--discord-bot.cue  brick-interface--env.cue  brick-interface--fmt.cue  brick-interface--gmail-bot.cue  brick-interface--go-cmd-parent.cue  brick-interface--go-cmd.cue  brick-interface--matrix-bot.cue  brick-interface--oci.cue  brick-interface--skill.cue  brick-interface--telegram-bot.cue  brick-manifest.cue  brick-module--aws-account.cue  brick-module--aws-irsa.cue  brick-oci--bazel-remote.cue  brick-oci--registry.cue  brick-root--.aws.cue  brick-root--skills--sp-bricks.cue  brick-root--skills--sp-options.cue  brick-root.cue  (+61 more)
kernel/doc/: BRICK-CREATE.md  BRICK-GO.md  PORTABILITY.md
kernel/fmt/bazel/: BUILD.bazel  formatter.cue
kernel/fmt/cue/: formatter.cue
kernel/fmt/dprint/: formatter.cue
kernel/fmt/go/: formatter.cue
kernel/fmt/java/: BUILD.bazel
kernel/gen-versions/: BUILD.bazel  arc_runners.bzl  argo_rollouts.bzl  argocd.bzl  aws.bzl  babashka.bzl  bazel_skylib.bzl  buf.bzl  capsule.bzl  cloudnative_pg.bzl  code-server.bzl  coder.bzl  crane.bzl  delta.bzl  difftastic.bzl  dprint.bzl  external_secrets.bzl  gh.bzl  git_lfs.bzl  go.bzl  goldilocks.bzl  k3d.bzl  k8s_a.bzl  karpenter.bzl  kruise.bzl  kubectl.bzl  kustomize.bzl  linkerd.bzl  linkerd_crds.bzl  metrics_server.bzl  node.bzl  nono.bzl  oauth2_proxy.bzl  opencode.bzl  pipx.bzl  prettier.bzl  protobuf.bzl  python.bzl  reloader.bzl  river.bzl  (+15 more)
kernel/gross/: dispatch.cue  registry-ca.pem  registry-cert.pem
kernel/helpers/: bazel.cue
kernel/image/: BUILD.bazel  dispatch.cue
kernel/lib/: BUILD.bazel  defn.clj  devcontainer.clj  dispatch.cue
kernel/oci/: BUILD.bazel
kernel/schema/: BUILD.bazel  app.cue  auth.cue  brick.cue  discordbot.cue  dispatch.cue  gmailbot.cue  image.cue  irsa.cue  k3d.cue  k8s.cue  matrixbot.cue  mirror.cue  oci.cue  skill.cue  slackbot.cue  versions.cue
kernel/spec/: BUILD.bazel  contracts-schema.cue  contracts-vet-test.clj  convention-contracts-formatters.cue  convention-contracts-k3dirsa.cue  convention-contracts-tenantstamp.cue  convention-contracts.cue  cross-tenant-lit-vet-test.clj  empty-tenant-probe-test.clj  fork-smoke-test.clj  gen-files.txt  known-shared.cue  lattice-schema.cue  lattice.cue  manual-files-airef.cue  manual-files-catalog.cue  manual-files-gen.cue  manual-files-interface.cue  manual-files-kernel-misc.cue  manual-files-nono.cue  manual-files-root.cue  manual-files-skills.cue  manual-files-spec.cue  manual-files-tenant-catalogs.cue  manual-files-vendored.cue  mise.toml  sync-files.txt  tenant-stamp-smoke-test.clj
m/.devcontainer/: .zsh-entrypoint  .zshrc  BUILD.bazel  devcontainer.json  docker-compose.macos.yml  post-attach.clj
m/cue.mod/: BUILD.bazel
m/v/: BUILD.bazel  buildkite--agent.txt  cloudflare--artifact-fs.txt
root/: AGENTS.md  BUILD.bazel  README.md
root/.config/: BUILD.bazel  dispatch.cue  starship.toml
v/galleybytes--terraform-operator/: BUILD.bazel
var/: BUILD.bazel  gen-manifest.cue
var/lattice/: _index.json  _index.sha256  approved_requires.json  apps.json  formatters.json  oci_images.json  skills.json  tree--dirs--m--dirs--aidr.json  tree--dirs--m--dirs--airef.json  tree--dirs--m--dirs--bin.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--argo-rollouts.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--argocd.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--buildbuddy.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--capsule-tenants.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--external-dns-crds.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--external-dns.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--keda.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--kyverno.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--letsencrypt-issuer.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--linkerd-crds.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--metrics-server.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--tailscale-dns-policy.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--tailscale-operator.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--temporal.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--topolvm-crds.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--traefik.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app--dirs--vpa.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--app.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--infra.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--k8s.json  tree--dirs--m--dirs--tenant--dirs--library--dirs--spec.json  tree--dirs--m--dirs--tenant--dirs--library.json  tree--dirs--m--dirs--tenant--dirs--other.json  tree--dirs--m--dirs--v--dirs--buildkite--agent--dirs--cliconfig.json  tree--dirs--m--dirs--v--dirs--buildkite--agent--dirs--core.json  tree--dirs--m--dirs--v--dirs--buildkite--agent--dirs--env.json  tree--dirs--m--dirs--v--dirs--buildkite--agent--dirs--jobapi.json  tree--dirs--m--dirs--v--dirs--buildkite--agent--dirs--lock.json  tree--dirs--m--dirs--v--dirs--buildkite--agent--dirs--logger.json  tree--dirs--m--dirs--v--dirs--buildkite--agent--dirs--metrics.json  (+14 more)
(+1088 files in other folders)
