load("//kernel:fmt.bzl", "fmt_test")
load("//kernel:tagged.bzl", "tagged_file")

fmt_test(
    name = "build_bazel_fmt",
    src = "BUILD.bazel",
    tool = "buildifier",
)

tagged_file(
    name = "build_bazel_tag",
    src = "BUILD.bazel",
    tags = ["bazel", "bazel-build"],
)

[tagged_file(
    name = md.replace(".md", "_tag").replace("-", "_"),
    src = md,
    tags = ["aidr", "doc"],
) for md in glob(["*.md"], allow_empty = True)]

[fmt_test(
    name = "dispatch_cue_fmt",
    src = src,
    tool = "cue",
) for src in glob(["dispatch.cue"], allow_empty = True)]

[tagged_file(
    name = "dispatch_cue_tag",
    src = src,
    tags = ["cue", "source"],
) for src in glob(["dispatch.cue"], allow_empty = True)]
