load("//kernel:fmt.bzl", "fmt_test")
load("//kernel:tagged.bzl", "tagged_file")

exports_files([
    "defn.clj",
    "devcontainer.clj",
])

fmt_test(
    name = "build_bazel_fmt",
    src = "BUILD.bazel",
    tool = "buildifier",
)

fmt_test(
    name = "defn_fmt",
    src = "defn.clj",
    tool = "cljstyle",
)

fmt_test(
    name = "devcontainer_fmt",
    src = "devcontainer.clj",
    tool = "cljstyle",
)

tagged_file(
    name = "build_bazel_tag",
    src = "BUILD.bazel",
    tags = [
        "bazel",
        "bazel-build",
    ],
)

tagged_file(
    name = "defn_tag",
    src = "defn.clj",
    tags = [
        "clojure",
        "lib",
    ],
)

tagged_file(
    name = "devcontainer_tag",
    src = "devcontainer.clj",
    tags = [
        "clojure",
        "lib",
    ],
)

[fmt_test(
    name = "dispatch_cue_fmt",
    src = src,
    tool = "cue",
) for src in glob(["dispatch.cue"], allow_empty = True)]

[tagged_file(
    name = "dispatch_cue_tag",
    src = src,
    tags = [
        "cue",
        "source",
    ],
) for src in glob(["dispatch.cue"], allow_empty = True)]
