"""
External OCI images -- digests pinned in catalog/catalog.cue,
pulled by crane via 'mise run dev-pull',
loaded into local Docker as defn.dev/external/*.
"""

load("//kernel:fmt.bzl", "fmt_test")
load("//kernel:tagged.bzl", "tagged_file")

tagged_file(
    name = "build_tag",
    src = "BUILD.bazel",
    tags = ["bazel-build"],
)

fmt_test(
    name = "build_fmt",
    src = "BUILD.bazel",
    tool = "buildifier",
)

[fmt_test(
    name = "dispatch_cue_fmt",
    src = src,
    tool = "cue",
) for src in glob(["dispatch.cue"], allow_empty = True)]

[tagged_file(
    name = "dispatch_cue_tag",
    src = src,
    tags = [
        "cue",
        "source",
    ],
) for src in glob(["dispatch.cue"], allow_empty = True)]
